--- a/index.html
+++ b/index.html
@@ -1,29 +1,29 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bevy WebGPU App</title>
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            background-color: #333;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            width: 100vw;
-            height: 100vh;
-            overflow: hidden;
-        }
-        canvas {
-            background-color: #222;
-            max-width: 100%;
-            max-height: 100%;
-        }
-    </style>
-</head>
-<body>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Bevy WebGPU App</title>
+        <style>
+            body {
+                margin: 0;
+                padding: 0;
+                background-color: #333;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                width: 100vw;
+                height: 100vh;
+                overflow: hidden;
+            }
+            canvas {
+                background-color: #222;
+                max-width: 100%;
+                max-height: 100%;
+            }
+        </style>
+        <link rel="copy-dir" href="assets" data-trunk />
+    </head>
+    <body></body>
 </html>
